--- a/exercicio_css/main.css
+++ b/exercicio_css/main.css
@@ -1,114 +1,161 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 header{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: pink;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #7e5b40;
+  margin-bottom: 0;
 }
 
-.titulo-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: pink;
-    border-bottom: 2px solid white;
+.container-cabecalho{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 2px solid #493323;
 }
 
-.titulo-site{
-    color: maroon;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 32px;
+.titulo-site {
+  color: #EAAC7F;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 48px;
 }
 
-.links-secoes{
-    padding: 10px;
-    display: flex;
-    margin-right: 10px;
-    
+.links-secoes {
+  padding: 10px;
+  display: flex;
+  margin-right: 10px;    
 }
 
 .links-secoes ul{
-    display: flex;
-    list-style-type: none;    
+  display: flex;
+  list-style-type: none;    
 }
 
 .links-secoes li{
-    margin-right: 10px;
+  margin-right: 10px;
+  font-size: 20px;
 }
 
 .links-secoes a{
-    color: maroon;
-    text-decoration: none;
-    padding: 8px;
+  color: #FFDF91;
+  text-decoration: none;
+  padding: 20px;
+  font-family: Arial, Helvetica, sans-serif
+}
+
+.titulo-secao-um, .titulo-secao-tres{
+  display: flex;
+  justify-content: center;
+  background-color: #EAAC7F;
+  color: #922033;
+  font-size: 30px;
+  padding: 10px; 
+  font-family: Arial, Helvetica, sans-serif;   
+}
+
+.grupo-noticias-um, .grupo-secao-tres{
+  display: flex;
+  justify-content: center; 
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: #EAAC7F;
+}
+.grupo-noticias-um ul, .grupo-secao-tres ul {
+  list-style-type: none; 
+  display: flex; 
+  gap: 20px;
+}
+
+.grupo-noticias-um li, .grupo-secao-tres li {
+  display: flex; 
+  flex-direction: row; 
+  align-items: center; 
+}
+
+.titulo-secao-dois, .titulo-secao-quatro{
+  display: flex;
+  justify-content: center;
+  background-color: #FFDF91;
+  color: #922033;
+  font-size: 30px;
+  padding: 10px; 
+  font-family: Arial, Helvetica, sans-serif; 
+}
+.grupo-noticias-dois, .grupo-secao-quatro{
+  display: flex;
+  justify-content: center; 
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: #FFDF91;
+}
+.grupo-noticias-dois ul, .grupo-secao-quatro ul {
+  list-style-type: none; 
+  display: flex; 
+  gap: 20px;
+}
+
+.grupo-noticias-dois li, .grupo-secao-quatro li{
+  display: flex; 
+  flex-direction: row; 
+  align-items: center; 
+}
+
+.titulo-noticia{
+  display: flex;
+  color: #493323;
+  font-size: 18px;
+  justify-content: flex-start;
+  align-items: baseline;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .imagem-noticia{
-    display: flex;
-    height: 180px;
-    align-items: center;
-    
+  display: flex;
+  width: 100%;
+  align-items: center;  
+  justify-content: center;  
 }
 
-.grupo-noticias {
-    display: flex;
-    justify-content: center; 
-    align-items: flex-start;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .grupo-noticias ul {
-    list-style-type: none; 
-    display: flex; 
-    gap: 20px;
-  }
-  
-  .grupo-noticias li {
-    display: flex; 
-    flex-direction: row; 
-    align-items: center; 
-  }
-  
-  .grupo-noticias li img {
-    flex-shrink: 0; 
-    margin-right: 10px; 
-  }
-  
-  .grupo-noticias li p {
-    margin: 0; 
-  }
+.descricao-noticia{
+  color: #493323;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  section {
-    padding: 16px 0;
-  }
+.botao-lermais{
+  background-color: #922033;
+  color: #FFDF91;
+  padding: 5px;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  font-size: 14px ;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
 
-  section h2{
-    margin-bottom: 16px;
-  }
+.botao-lermais a:hover{
+  text-decoration: underline;
+}
 
-  .titulo-noticia{
-    color: palevioletred;
-    font-size: medium;
-    padding: 20px, 0;
-  }
+.container-rodape{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #7e5b40;
+  height: 60px;
+}
 
-  .descricao-noticia {
-    font-size: small;
-    padding: 10px;
-    color: maroon;
-    align-items: center;
-  }
-
-  .titulo-secao{
-    background-color: #ccc;
-    color: white;
-    padding: 10px
-    
-  }
-  
+.texto-rodape{
+  color: #493323;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
